[chore] busines_scraper: build urls

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-SHOW_BROWSER="True"
+SHOW_BROWSER=True
 KEYWORDS="tec"
 COMPANY_TYPE=1
-COMPANY_SIZE=2
-PROVINCE_HEADQUARTERS=1
-TARGET_COMPANY_SIZE=2
-CATEGORIES=3
-SUBCATEGORIES=1
-TYPE=1
-LANGUAGE=1
-LICENSE=1
+COMPANY_SIZE=0
+PROVINCE_HEADQUARTERS=0
+TARGET_COMPANY_SIZE=0
+CATEGORIES=0
+SUBCATEGORIES=0
+TYPE=0
+LANGUAGE=0
+LICENSE=0
